Changes in widget
Signed-off-by: hudecsamuel <hudecsamuel@gmail.com>

--- a/resources/assets/sass/_apps.sass
+++ b/resources/assets/sass/_apps.sass
@@ -318,7 +318,7 @@ $detail-button-color: #6EA625
 
 		.widget
 			background: $widget-background-color
-			height: calc(100% - 35px)
+			height: 100%
 			box-shadow: inset 0px -20px 80px -55px
 
 			.content
