Export csv is now ordered correctly by date Changed widget styling
Signed-off-by: hudecsamuel <hudecsamuel@gmail.com>

--- a/resources/assets/sass/_apps.sass
+++ b/resources/assets/sass/_apps.sass
@@ -319,7 +319,7 @@ $detail-button-color: #6EA625
 		.widget
 			background: $widget-background-color
 			height: 100%
-			box-shadow: inset 0px -20px 80px -55px
+			//box-shadow: inset 0px -20px 80px -55px
 
 			.content
 				/* Basic widget style collection. For use in various widgets */
