Added PL lang css: removed background from body

--- a/resources/assets/sass/_layout.sass
+++ b/resources/assets/sass/_layout.sass
@@ -9,7 +9,7 @@
 		color: $stripe-link-color
 
 body
-	background: $bg-color
+	background: none
 	text-align: left
 	font-size: 10pt
 	font-family: $base-font-family
